# c-string-reader

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.c
.github/: labeler.yml
.github/workflows/: c-string-reader-workflow.yml  rgaas-workflow.yml
modules/: config.h
modules/argparser/: argparser.c  argparser.h
modules/reader/: reader.c  reader.h
test/: input.txt  valgrind.sh
